# sniflo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_zh.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/scripts/: build-macos-dmg.sh
frontend/src/: App.tsx  index.css  index.css.test.ts  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src-tauri/src/ai/: agent.rs  context.rs  mod.rs  skill.rs  types.rs
frontend/src-tauri/src/ai/client/: anthropic.rs  claude_code.rs  codex_cli.rs  mod.rs  openai.rs
frontend/src-tauri/src/ai/tools/: breakpoint_tools.rs  cert_tools.rs  export_tools.rs  mod.rs  proxy_tools.rs  script_tools.rs  selected_sessions_tool.rs  session_tools.rs
frontend/src-tauri/src/commands/: ai.rs  cert.rs  mod.rs  proxy.rs  script.rs  session.rs  storage.rs  system_proxy.rs  update.rs
frontend/src-tauri/src/proxy_core/http/: decode.rs  message.rs  mod.rs  proxy.rs  tls.rs
frontend/src-tauri/src/scripting/: engine.rs  executor.rs  mod.rs  types.rs
frontend/src-tauri/src/storage/: conversation_repo.rs  db.rs  mod.rs  runtime_repo.rs  script_repo.rs  settings_repo.rs  skill_repo.rs
frontend/src/__tests__/: setup.ts
frontend/src/components/: AlertBanner.tsx  AppLogo.tsx  CopyButton.tsx  DataTableHeader.tsx  EmptyState.tsx  FormSection.tsx  PageToolbar.tsx  PhaseDropdown.tsx  PillSelect.tsx  ResizeDivider.test.tsx  ResizeDivider.tsx  SettingsSectionHeader.tsx  StatusDot.tsx
frontend/src/hooks/: use-click-outside.ts  use-resize-drag.ts  use-tauri-events.ts
(+74 files in other folders)
